correct overflow error

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ h1, h2, h5, p{
     grid-template-columns: 1fr 1fr;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 #grid__tl__btn,
@@ -178,7 +179,7 @@ article h3, article p {
     width: 30vw;
     top: 10vh;
     right: 0;
-  /*  transform: translateX(100vw) translateY(-100vh); */
+    transform: translateX(100vw) translateY(-100vh); 
 }
 
 .merch {
@@ -223,3 +224,5 @@ font-size: 0.75rem;
 .merch__skill div div {
    justify-content: space-between;
 }
+
+/* Bottom Left Corner */
